Started adding "AddUser" method

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-@using (Html.BeginForm("Logout", "Home", FormMethod.Post))
+@using (Html.BeginForm("Logout", "Account", FormMethod.Post))
 {
     <div class="input-form">
         <input type="submit" name="logout" value="Log out" />
