--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,24 +1,31 @@
 ﻿@model EmployeePerformanceApp.Models.LoginModel
+@{ 
+    Layout = null;
+}
 
-<h2>Sign in</h2>
+<link rel="stylesheet" type="text/css" href="~/css/Login.css" />
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 
-@*<a asp-action="Register" asp-controller="Account">Registration</a>*@
+<body>
+    <h2>Sign in</h2>
 
-<form asp-action="Login" asp-controller="Account" asp-anti-forgery="true">
-    <div class="validation" asp-validation-summary="ModelOnly"></div>
-    <div>
-        <div class="form-group">
-            <label asp-for="Login">Login</label><br />
-            <input type="text" asp-for="Login" />
-            <span asp-validation-for="Login" />
-        </div>
-        <div class="form-group">
-            <label asp-for="Password">Password</label><br />
-            <input asp-for="Password" />
-            <span asp-validation-for="Password" />
-        </div>
+
+    <form asp-action="Login" asp-controller="Account" asp-anti-forgery="true">
+        <div class="validation" asp-validation-summary="ModelOnly"></div>
         <div>
-            <input type="submit" value="Sign in" />
+            <div class="form-group">
+                <label asp-for="Login">Login</label><br />
+                <input type="text" asp-for="Login" />
+                <span asp-validation-for="Login" />
+            </div>
+            <div class="form-group">
+                <label asp-for="Password">Password</label><br />
+                <input asp-for="Password" />
+                <span asp-validation-for="Password" />
+            </div>
+            <div>
+                <input type="submit" value="Sign in" />
+            </div>
         </div>
-    </div>
-</form>
+    </form>
+</body>
