--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -9,3 +9,6 @@
 
 <a asp-action="AddUser">Add User</a>
 <a asp-action="DeleteUser">Delete User</a>
+<br />
+<a asp-action="AddParameter">Add Parameter</a>
+<a asp-action="DeleteParameter">Delete Parameter</a>
