Add empty selection done

--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -12,3 +12,5 @@
 <br />
 <a asp-action="AddParameter">Add Parameter</a>
 <a asp-action="DeleteParameter">Delete Parameter</a>
+<br />
+<a asp-action="AddSelection">Add Selection</a>
