--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -3,8 +3,7 @@
     Layout = null;
 }
 
-<link rel="stylesheet" type="text/css" href="~/css/Login.css" />
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" type="text/css" href="~/css/site.css" />
 
 <body>
     <h2>Sign in</h2>
