--- a/Views/Admin/AddSelection.cshtml
+++ b/Views/Admin/AddSelection.cshtml
@@ -45,12 +45,9 @@
         <div>
             @foreach (Parameter parameter in Model.Parameters)
             {
-                if (parameter.IsInUse)
-                    continue;
-                <p>
+                <label>
                     <input type="checkbox" name="myarray" id="myarray" value="@parameter.Id" /> @parameter.Name
-                    @*<input type="number" step="0.01" name="mycoefficientarray" id="mycoefficientarray" placeholder="Coefficient" />*@
-                </p>
+                </label>
             }
         </div>
     </div>
