--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -13,4 +13,4 @@
 <a asp-action="AddParameter">Add Parameter</a>
 <a asp-action="DeleteParameter">Delete Parameter</a>
 <br />
-<a asp-action="AddSelection">Add Selection</a>
+<a asp-action="ChooseDepartment">Add Selection</a>
