--- a/Views/Chief/Index.cshtml
+++ b/Views/Chief/Index.cshtml
@@ -7,5 +7,10 @@
     </div>
 }
 
-<a asp-action="AddMark">Add Mark</a>
-<a asp-action="GetAllMarks">Get All Marks</a>
+<p><a asp-action="AddMark">Add Mark</a></p>
+<p>
+    <a asp-action="GetAllMarks">See All Marks</a>
+    <a asp-action="GetAllActualMarks">See All Actual Marks</a>
+</p>
+
+<p><a asp-action="GetAllSelections">See Selections</a></p>
