--- a/Views/Admin/AddParameter.cshtml
+++ b/Views/Admin/AddParameter.cshtml
@@ -25,7 +25,7 @@
     </div>
 
     <input type="text" name="name" required placeholder="Name" />
-    <input type="number" step="0.01" name="coefficient" required placeholder="coefficient" />
+    <input type="number" min="0" max="1" step="0.01" name="coefficient" required placeholder="coefficient" />
 
     <div>
         <input type="submit" value="Add" />
