--- a/Views/Admin/AddUser.cshtml
+++ b/Views/Admin/AddUser.cshtml
@@ -44,8 +44,20 @@
 
     <input type="text" name="surname" required placeholder="Surname" />
     <input type="text" name="name" required placeholder="Name" />
-    <input type="text" name="login" required placeholder="Login" />
-    <input type="text" name="password" required placeholder="Password" />
+    <input type="text" name="login" id="login" class="input" required placeholder="Login" />
+    <input type="text" name="password" id="password" class="input" required placeholder="Password" />
+
+    <script>
+        const inputForms = document.querySelectorAll(".input");
+        for (const i of inputForms) {
+            i.onkeyup = function () {
+                var reg = /[а-яА-ЯёЁ]/g;
+                if (this.value.search(reg) != -1) {
+                    this.value = this.value.replace(reg, '');
+                }
+            }
+        }
+    </script>
 
     <div>
         <label for="roleId">Role:</label>
