--- a/Views/Chief/Index.cshtml
+++ b/Views/Chief/Index.cshtml
@@ -9,8 +9,8 @@
 
 <p><a asp-action="AddMark">Add Mark</a></p>
 <p>
-    <a asp-action="GetAllMarks">See All Marks</a>
+    <div><a asp-action="GetAllMarks">See All Marks</a></div>
     <a asp-action="GetAllActualMarks">See All Actual Marks</a>
 </p>
 
-<p><a asp-action="GetAllSelections">See Selections</a></p>
+<p><a asp-action="ChooseSelection">Selections</a></p>
