--- a/Views/Chief/SelectionDetails.cshtml
+++ b/Views/Chief/SelectionDetails.cshtml
@@ -8,12 +8,14 @@
     <tr>
         <td>Surname</td>
         <td>Name</td>
+        <td>Role</td>
     </tr>
     @foreach (User user in Model.TopUsers)
     {
         <tr>
             <td>@user.Surname</td>
             <td>@user.Name</td>
+            <td>@user.Role.Name</td>
         </tr>
     }
 </table>
@@ -24,12 +26,14 @@
     <tr>
         <td>Surname</td>
         <td>Name</td>
+        <td>Role</td>
     </tr>
     @foreach (User user in Model.BottomUsers)
     {
-        <tr>
-            <td>@user.Surname</td>
-            <td>@user.Name</td>
-        </tr>
+    <tr>
+        <td>@user.Surname</td>
+        <td>@user.Name</td>
+        <td>@user.Role.Name</td>
+    </tr>
     }
 </table>
