--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -8,7 +8,7 @@
 }
 
 <a asp-action="AddUser">Add User</a>
-<a asp-action="DeleteUser">Delete User</a>
+<a asp-action="DeleteUser">Fire/Hire User</a>
 <br />
 <a asp-action="AddParameter">Add Parameter</a>
 <a asp-action="DeleteParameter">Delete Parameter</a>
