--- a/Views/Admin/DeleteParameter.cshtml
+++ b/Views/Admin/DeleteParameter.cshtml
@@ -7,15 +7,17 @@
         <td>Id</td>
         <td>Name</td>
         <td>Coefficient</td>
+        <td>Department</td>
         <td>Delete Parameter</td>
     </tr>
     @foreach (var item in Model)
     {
-        <tr>
-            <td>@item.Id</td>
-            <td>@item.Name</td>
-            <td>@item.Coefficient</td>
-            <td><a asp-controller="Admin" asp-action="DeleteParameterAction" asp-route-id="@item.Id">Delete</a></td>
-        </tr>
+    <tr>
+        <td>@item.Id</td>
+        <td>@item.Name</td>
+        <td>@item.Coefficient</td>
+        <td>@item.Department.Name</td>
+        <td><a asp-controller="Admin" asp-action="DeleteParameterAction" asp-route-id="@item.Id">Delete</a></td>
+    </tr>
     }
 </table>
