AddMarksViaTable is ready

--- a/Views/Chief/Index.cshtml
+++ b/Views/Chief/Index.cshtml
@@ -7,10 +7,13 @@
     </div>
 }
 
-<p><a asp-action="AddMark">Add Mark</a></p>
+<p><a asp-action="AddMark">Add Mark</a> <a asp-action="AddMarkViaTable">Add mark via table</a></p>
 <p>
     <div><a asp-action="GetAllMarks">See All Marks</a></div>
     <a asp-action="GetAllActualMarks">See All Actual Marks</a>
 </p>
 
-<p><a asp-action="ChooseSelection">Selections</a></p>
+<p>
+    <a asp-action="ChooseSelection">Choose selection</a>
+    <a asp-action="SeeAllSelections">See all selections</a>
+</p>
